--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
 		"react-chartjs-2": "2.11.1",
 		"react-dom": "17.0.1",
 		"react-draggable": "4.4.3",
+		"react-files": "^3.0.0-alpha.1",
 		"react-frame-component": "4.1.3",
 		"react-i18next": "11.8.5",
 		"react-masonry-css": "1.0.14",
@@ -67,16 +68,16 @@
 		"react-scripts": "3.4.4",
 		"react-select": "3.1.1",
 		"react-spring": "8.0.27",
-		"react-swipeable-views-utils": "0.13.9",
-		"react-swipeable-views": "0.13.9",
 		"react-swipeable": "6.0.1",
+		"react-swipeable-views": "0.13.9",
+		"react-swipeable-views-utils": "0.13.9",
 		"react-table": "7.6.3",
 		"react-text-mask": "5.4.3",
 		"react-toastify": "^7.0.4",
 		"react-virtualized": "9.22.3",
 		"react-window": "1.8.6",
-		"redux-logger": "4.0.0",
 		"redux": "4.0.5",
+		"redux-logger": "4.0.0",
 		"styled-components": "5.2.1",
 		"typeface-muli": "1.1.13",
 		"velocity-animate": "1.5.2",
