--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
 		"react-swipeable-views-utils": "0.13.9",
 		"react-table": "7.6.3",
 		"react-text-mask": "5.4.3",
+		"react-to-print": "^2.13.0",
 		"react-toastify": "^7.0.4",
 		"react-virtualized": "9.22.3",
 		"react-window": "1.8.6",
