--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
 		"react-beautiful-dnd": "13.0.0",
 		"react-big-calendar": "0.30.0",
 		"react-chartjs-2": "2.11.1",
+		"react-data-table-component": "^7.0.0-rc2",
 		"react-dom": "17.0.1",
 		"react-draggable": "4.4.3",
 		"react-files": "^3.0.0-alpha.1",
@@ -79,7 +80,7 @@
 		"react-window": "1.8.6",
 		"redux": "4.0.5",
 		"redux-logger": "4.0.0",
-		"styled-components": "5.2.1",
+		"styled-components": "^5.2.1",
 		"typeface-muli": "1.1.13",
 		"velocity-animate": "1.5.2",
 		"velocity-react": "1.4.3",
