--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
 		"react-data-table-component": "^7.2.0",
 		"react-dom": "17.0.1",
 		"react-draggable": "4.4.3",
+		"react-export-excel": "^0.5.3",
 		"react-files": "^3.0.0-alpha.1",
 		"react-frame-component": "4.1.3",
 		"react-i18next": "11.8.5",
